--- a/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
+++ b/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComplaintManager.cs" />
     <Compile Include="Services\ReportsService.cs" />
+    <Compile Include="Services\RoomService.cs" />
     <Compile Include="UI\ReportMenu.cs" />
   </ItemGroup>
   <ItemGroup>
