--- a/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
+++ b/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SHMS.ConsoleApp</RootNamespace>
     <AssemblyName>SHMS.ConsoleApp</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>net6.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -73,9 +73,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  
-  
+    <Reference Include="System.Xml" />  
+  </ItemGroup>
+  <ItemGroup> 
     <Compile Include="Exceptions\InvalidFeeException.cs" />
     <Compile Include="Exceptions\MissingComplaintException.cs" />
     <Compile Include="Exceptions\RoomAlreadyAssignedException.cs" />
@@ -85,18 +85,12 @@
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\Student.cs" />
-UnitTests
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
-
-master
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComplaintManager.cs" />
     <Compile Include="Services\ReportsService.cs" />
-UnitTests
     <Compile Include="SmartHostelManagementSystem.cs" />
-
-master
     <Compile Include="UI\ReportMenu.cs" />
   
 
