--- a/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
+++ b/SHMS.ConsoleApp/SHMS.ConsoleApp.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SHMS.ConsoleApp</RootNamespace>
     <AssemblyName>SHMS.ConsoleApp</AssemblyName>
-    <TargetFrameworkVersion>net6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -73,9 +73,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />  
+    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup> 
+  <ItemGroup>
     <Compile Include="Exceptions\InvalidFeeException.cs" />
     <Compile Include="Exceptions\MissingComplaintException.cs" />
     <Compile Include="Exceptions\RoomAlreadyAssignedException.cs" />
@@ -90,16 +90,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ComplaintManager.cs" />
     <Compile Include="Services\ReportsService.cs" />
-    <Compile Include="SmartHostelManagementSystem.cs" />
+    <Compile Include="Services\RoomService.cs" />
     <Compile Include="UI\ReportMenu.cs" />
-  
-
     <None Include="App.config" />
     <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="obj\Debug\SHMS.ConsoleApp.csproj.AssemblyReference.cache" />
     <None Include="packages.config" />
-  
-  
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="bin\Debug\" />
     <Folder Include="Data\" />
     <Folder Include="obj\Debug\TempPE\" />
